test/pass/parse_decorator_link.ms
@link("musi.io.write")
unsafe extern "C" proc write(s: Text);

@link("musi.io.writeln")
unsafe extern "C" proc writeln(s: Text);
