test/fail/codegen_decorator_wrong_arg_count.ms
@link("foo", "bar")
unsafe extern "C" proc bad();
